[gd_scene load_steps=35 format=2]

[ext_resource path="res://addons/sprite-baker/scenes/Timeline.tscn" type="PackedScene" id=1]
[ext_resource path="res://addons/sprite-baker/scenes/Scene3D.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/sprite-baker/scripts/bones_tree.gd" type="Script" id=3]
[ext_resource path="res://addons/sprite-baker/scripts/sprite_view.gd" type="Script" id=4]
[ext_resource path="res://addons/sprite-baker/scripts/scene_3d.gd" type="Script" id=5]
[ext_resource path="res://addons/sprite-baker/scripts/timeline.gd" type="Script" id=6]
[ext_resource path="res://addons/sprite-baker/scripts/model_3d_view.gd" type="Script" id=7]
[ext_resource path="res://addons/sprite-baker/resources/timeline_tick.stylebox" type="StyleBox" id=8]
[ext_resource path="res://addons/sprite-baker/scripts/preview.gd" type="Script" id=9]
[ext_resource path="res://addons/sprite-baker/icons/front_view.svg" type="Texture" id=10]
[ext_resource path="res://addons/sprite-baker/icons/rear_view.svg" type="Texture" id=11]
[ext_resource path="res://addons/sprite-baker/icons/top_view.svg" type="Texture" id=12]
[ext_resource path="res://addons/sprite-baker/icons/play.svg" type="Texture" id=13]
[ext_resource path="res://addons/sprite-baker/icons/right_view.svg" type="Texture" id=14]
[ext_resource path="res://addons/sprite-baker/icons/left_view.svg" type="Texture" id=15]
[ext_resource path="res://addons/sprite-baker/icons/icon_clear.svg" type="Texture" id=16]
[ext_resource path="res://addons/sprite-baker/icons/loop.svg" type="Texture" id=17]
[ext_resource path="res://addons/sprite-baker/icons/stop.svg" type="Texture" id=18]

[sub_resource type="ButtonGroup" id=1]
resource_name = "ViewGroup"

[sub_resource type="InputEventKey" id=2]
scancode = 16777351

[sub_resource type="ShortCut" id=3]
shortcut = SubResource( 2 )

[sub_resource type="InputEventKey" id=4]
control = true
command = true
scancode = 16777351

[sub_resource type="ShortCut" id=5]
shortcut = SubResource( 4 )

[sub_resource type="InputEventKey" id=6]
scancode = 16777353

[sub_resource type="ShortCut" id=7]
shortcut = SubResource( 6 )

[sub_resource type="InputEventKey" id=8]
control = true
command = true
scancode = 16777353

[sub_resource type="ShortCut" id=9]
shortcut = SubResource( 8 )

[sub_resource type="InputEventKey" id=10]
scancode = 16777357

[sub_resource type="ShortCut" id=11]
shortcut = SubResource( 10 )

[sub_resource type="World" id=12]

[sub_resource type="StyleBoxEmpty" id=13]

[sub_resource type="World" id=14]

[sub_resource type="StyleBoxEmpty" id=15]

[sub_resource type="StyleBoxEmpty" id=16]

[node name="PreviewBox" type="VSplitContainer" groups=[
"3D2SS.ModelViewport",
"3D2SS.ModelData",
"3D2SS.ModelAnimation",
]]
margin_right = 362.0
margin_bottom = 547.0
rect_min_size = Vector2( 1, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
split_offset = 150
script = ExtResource( 9 )
pixel_density_path = NodePath("OptionsScroll/OptionsGrid/PixelDensity")
margin_path = NodePath("OptionsScroll/OptionsGrid/Margin")
root_motion_dialog_path = NodePath("OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog")
root_motion_clear_path = NodePath("OptionsScroll/OptionsGrid/RootMotionBox/RootMotionClear")
root_motion_path = NodePath("OptionsScroll/OptionsGrid/RootMotionBox/RootMotion")
bones_tree_path = NodePath("OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog/Scroll/BonesTree")
timeline_path = NodePath("Box/ControlsBox/Timeline")
play_path = NodePath("Box/ControlsBox/PlayBox/Play")
stop_path = NodePath("Box/ControlsBox/PlayBox/Stop")
time_spin_path = NodePath("Box/ControlsBox/Box/Time")
loop_path = NodePath("Box/ControlsBox/Box/Loop")
front_view_path = NodePath("Box/ViewBox/OrthogonalBox/OrthogonalGroup/Front")
rx_spin_path = NodePath("Box/ControlsBox/RotationBox/RxBox/Rx")
ry_spin_path = NodePath("Box/ControlsBox/RotationBox/RyBox/Ry")
bake_button_path = NodePath("Box/ViewBox/BakeAnim")
view_buttons_group = SubResource( 1 )

[node name="Box" type="VBoxContainer" parent="."]
margin_right = 362.0
margin_bottom = 420.0

[node name="ViewBox" type="HBoxContainer" parent="Box"]
margin_right = 362.0
margin_bottom = 44.0

[node name="BakeAnim" type="Button" parent="Box/ViewBox"]
margin_top = 12.0
margin_right = 113.0
margin_bottom = 32.0
size_flags_vertical = 4
disabled = true
text = "Bake Animation"

[node name="OrthogonalBox" type="VBoxContainer" parent="Box/ViewBox"]
margin_left = 117.0
margin_right = 362.0
margin_bottom = 44.0
size_flags_horizontal = 3

[node name="OrthogonalLabel" type="Label" parent="Box/ViewBox/OrthogonalBox"]
margin_right = 245.0
margin_bottom = 14.0
text = "Orthogonal View"

[node name="OrthogonalGroup" type="HBoxContainer" parent="Box/ViewBox/OrthogonalBox"]
margin_top = 18.0
margin_right = 245.0
margin_bottom = 44.0

[node name="Front" type="Button" parent="Box/ViewBox/OrthogonalBox/OrthogonalGroup"]
margin_right = 32.0
margin_bottom = 26.0
toggle_mode = true
shortcut = SubResource( 3 )
group = SubResource( 1 )
icon = ExtResource( 10 )

[node name="Rear" type="Button" parent="Box/ViewBox/OrthogonalBox/OrthogonalGroup"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 26.0
toggle_mode = true
shortcut = SubResource( 5 )
group = SubResource( 1 )
icon = ExtResource( 11 )

[node name="Left" type="Button" parent="Box/ViewBox/OrthogonalBox/OrthogonalGroup"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 26.0
toggle_mode = true
shortcut = SubResource( 7 )
group = SubResource( 1 )
icon = ExtResource( 15 )

[node name="Right" type="Button" parent="Box/ViewBox/OrthogonalBox/OrthogonalGroup"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 26.0
toggle_mode = true
shortcut = SubResource( 9 )
group = SubResource( 1 )
icon = ExtResource( 14 )

[node name="Top" type="Button" parent="Box/ViewBox/OrthogonalBox/OrthogonalGroup"]
margin_left = 144.0
margin_right = 176.0
margin_bottom = 26.0
toggle_mode = true
shortcut = SubResource( 11 )
group = SubResource( 1 )
icon = ExtResource( 12 )

[node name="TabContainer" type="TabContainer" parent="Box"]
margin_top = 48.0
margin_right = 362.0
margin_bottom = 348.0
rect_min_size = Vector2( 150, 150 )
size_flags_vertical = 3
tab_align = 0

[node name="3D View" type="ViewportContainer" parent="Box/TabContainer" groups=[
"3D2SS.ModelViewport",
"3D2SS.ModelData",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
stretch = true
script = ExtResource( 7 )

[node name="Viewport3D" type="Viewport" parent="Box/TabContainer/3D View"]
size = Vector2( 354, 264 )
own_world = true
world = SubResource( 12 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 3

[node name="Scene3D" type="Spatial" parent="Box/TabContainer/3D View/Viewport3D" groups=[
"3D2SS.ModelMaterials",
"3D2SS.Model",
"3D2SS.ModelAnimation",
] instance=ExtResource( 2 )]
script = ExtResource( 5 )

[node name="Sprite" type="Panel" parent="Box/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0
custom_styles/panel = SubResource( 13 )

[node name="SpriteView" type="ViewportContainer" parent="Box/TabContainer/Sprite" groups=[
"3D2SS.ModelViewport",
"3D2SS.ModelData",
]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -39.0
margin_top = -35.0
margin_right = 39.0
margin_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 4.48571, 4.48571 )
rect_pivot_offset = Vector2( 39, 35 )
stretch = true
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport3D" type="Viewport" parent="Box/TabContainer/Sprite/SpriteView"]
size = Vector2( 78, 70 )
own_world = true
world = SubResource( 14 )
transparent_bg = true
handle_input_locally = false
render_target_update_mode = 0

[node name="Scene3D" type="Spatial" parent="Box/TabContainer/Sprite/SpriteView/Viewport3D" groups=[
"3D2SS.ModelMaterials",
"3D2SS.Model",
"3D2SS.ModelAnimation",
] instance=ExtResource( 2 )]
script = ExtResource( 5 )

[node name="ControlsBox" type="HBoxContainer" parent="Box"]
margin_top = 352.0
margin_right = 362.0
margin_bottom = 406.0
custom_constants/separation = 10

[node name="PlayBox" type="VBoxContainer" parent="Box/ControlsBox"]
margin_right = 28.0
margin_bottom = 54.0
size_flags_vertical = 3
alignment = 2

[node name="Play" type="Button" parent="Box/ControlsBox/PlayBox"]
margin_top = 6.0
margin_right = 28.0
margin_bottom = 28.0
disabled = true
icon = ExtResource( 13 )

[node name="Stop" type="Button" parent="Box/ControlsBox/PlayBox"]
margin_top = 32.0
margin_right = 28.0
margin_bottom = 54.0
disabled = true
icon = ExtResource( 18 )

[node name="Timeline" type="VBoxContainer" parent="Box/ControlsBox" instance=ExtResource( 1 )]
margin_left = 38.0
margin_right = 159.0
margin_bottom = 54.0
size_flags_horizontal = 3
custom_constants/separation = 0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": true
}
tick_style = ExtResource( 8 )
time_ruler_path = NodePath("TimeRuler")
slider_path = NodePath("Margin/Background/Slider")
background_path = NodePath("Margin/Background")
keys_ctrl_path = NodePath("Margin/Background/Slider/Keys")

[node name="Box" type="VBoxContainer" parent="Box/ControlsBox"]
margin_left = 169.0
margin_right = 243.0
margin_bottom = 54.0
alignment = 2

[node name="Loop" type="Button" parent="Box/ControlsBox/Box"]
margin_left = 23.0
margin_top = 4.0
margin_right = 51.0
margin_bottom = 26.0
size_flags_horizontal = 4
disabled = true
toggle_mode = true
icon = ExtResource( 17 )

[node name="Time" type="SpinBox" parent="Box/ControlsBox/Box"]
margin_top = 30.0
margin_right = 74.0
margin_bottom = 54.0
max_value = 1.0
step = 0.01
editable = false
suffix = "s"

[node name="RotationBox" type="VBoxContainer" parent="Box/ControlsBox"]
margin_left = 253.0
margin_right = 362.0
margin_bottom = 54.0

[node name="RxBox" type="HBoxContainer" parent="Box/ControlsBox/RotationBox"]
margin_right = 109.0
margin_bottom = 24.0

[node name="RxLabel" type="Label" parent="Box/ControlsBox/RotationBox/RxBox"]
margin_top = 5.0
margin_right = 15.0
margin_bottom = 19.0
text = "Rx"

[node name="Rx" type="SpinBox" parent="Box/ControlsBox/RotationBox/RxBox"]
margin_left = 19.0
margin_right = 109.0
margin_bottom = 24.0
rect_min_size = Vector2( 90, 0 )
min_value = -180.0
max_value = 180.0
step = 0.1
suffix = "deg"

[node name="RyBox" type="HBoxContainer" parent="Box/ControlsBox/RotationBox"]
margin_top = 28.0
margin_right = 109.0
margin_bottom = 52.0

[node name="RyLabel" type="Label" parent="Box/ControlsBox/RotationBox/RyBox"]
margin_top = 5.0
margin_right = 15.0
margin_bottom = 19.0
text = "Ry"

[node name="Ry" type="SpinBox" parent="Box/ControlsBox/RotationBox/RyBox"]
margin_left = 19.0
margin_right = 109.0
margin_bottom = 24.0
rect_min_size = Vector2( 90, 0 )
min_value = -400.0
max_value = 400.0
step = 0.1
suffix = "deg"

[node name="Separator" type="HSeparator" parent="Box"]
margin_top = 410.0
margin_right = 362.0
margin_bottom = 420.0
custom_styles/separator = SubResource( 15 )
custom_constants/separation = 10

[node name="OptionsScroll" type="ScrollContainer" parent="."]
margin_top = 432.0
margin_right = 362.0
margin_bottom = 547.0
size_flags_vertical = 3

[node name="OptionsGrid" type="GridContainer" parent="OptionsScroll"]
margin_right = 401.0
margin_bottom = 103.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="PixelDensityLabel" type="Label" parent="OptionsScroll/OptionsGrid"]
margin_top = 5.0
margin_right = 115.0
margin_bottom = 19.0
text = "Pixel Density"

[node name="PixelDensity" type="SpinBox" parent="OptionsScroll/OptionsGrid"]
margin_left = 119.0
margin_right = 247.0
margin_bottom = 24.0
size_flags_vertical = 4
min_value = 1.0
max_value = 7680.0
value = 32.0
allow_greater = true

[node name="Separator1" type="VSeparator" parent="OptionsScroll/OptionsGrid"]
margin_left = 251.0
margin_right = 276.0
margin_bottom = 24.0
custom_styles/separator = SubResource( 16 )
custom_constants/separation = 25

[node name="MarginLabel" type="Label" parent="OptionsScroll/OptionsGrid"]
margin_left = 280.0
margin_top = 5.0
margin_right = 323.0
margin_bottom = 19.0
text = "Margin"

[node name="Margin" type="SpinBox" parent="OptionsScroll/OptionsGrid"]
margin_left = 327.0
margin_right = 401.0
margin_bottom = 24.0
size_flags_vertical = 4
max_value = 7680.0
allow_greater = true
suffix = "px"

[node name="RootMotionLabel" type="Label" parent="OptionsScroll/OptionsGrid"]
margin_top = 32.0
margin_right = 115.0
margin_bottom = 46.0
text = "Root Motion Track"

[node name="RootMotionBox" type="HBoxContainer" parent="OptionsScroll/OptionsGrid"]
margin_left = 119.0
margin_top = 28.0
margin_right = 247.0
margin_bottom = 50.0
custom_constants/separation = 0

[node name="RootMotion" type="Button" parent="OptionsScroll/OptionsGrid/RootMotionBox"]
margin_top = 1.0
margin_right = 100.0
margin_bottom = 21.0
rect_min_size = Vector2( 100, 0 )
size_flags_horizontal = 3
size_flags_vertical = 4
disabled = true
text = "Assign..."
clip_text = true

[node name="RootMotionDialog" type="ConfirmationDialog" parent="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion"]
margin_left = 10.0
margin_top = -407.0
margin_right = 350.0
margin_bottom = 93.0
window_title = "Edit Root Motion Track"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Scroll" type="ScrollContainer" parent="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BonesTree" type="Tree" parent="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog/Scroll" groups=[
"3D2SS.ModelData",
]]
margin_right = 324.0
margin_bottom = 456.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/draw_relationship_lines = 1
select_mode = 1
script = ExtResource( 3 )
root_motion_button_path = NodePath("../../..")

[node name="RootMotionClear" type="Button" parent="OptionsScroll/OptionsGrid/RootMotionBox"]
margin_left = 100.0
margin_right = 128.0
margin_bottom = 22.0
disabled = true
icon = ExtResource( 16 )
clip_text = true

[node name="Separator2" type="VSeparator" parent="OptionsScroll/OptionsGrid"]
margin_left = 251.0
margin_top = 28.0
margin_right = 276.0
margin_bottom = 50.0
custom_styles/separator = SubResource( 16 )
custom_constants/separation = 25
[connection signal="pressed" from="Box/ViewBox/BakeAnim" to="." method="_on_BakeAnim_pressed"]
[connection signal="pressed" from="Box/ViewBox/OrthogonalBox/OrthogonalGroup/Front" to="." method="_on_view_pressed"]
[connection signal="pressed" from="Box/ViewBox/OrthogonalBox/OrthogonalGroup/Rear" to="." method="_on_view_pressed"]
[connection signal="pressed" from="Box/ViewBox/OrthogonalBox/OrthogonalGroup/Left" to="." method="_on_view_pressed"]
[connection signal="pressed" from="Box/ViewBox/OrthogonalBox/OrthogonalGroup/Right" to="." method="_on_view_pressed"]
[connection signal="pressed" from="Box/ViewBox/OrthogonalBox/OrthogonalGroup/Top" to="." method="_on_view_pressed"]
[connection signal="resized" from="Box/TabContainer/Sprite" to="Box/TabContainer/Sprite/SpriteView" method="_on_Sprite_resized"]
[connection signal="pixel_density_changed" from="Box/TabContainer/Sprite/SpriteView" to="." method="_on_SpriteView_pixel_density_changed"]
[connection signal="pressed" from="Box/ControlsBox/PlayBox/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Box/ControlsBox/PlayBox/Stop" to="." method="_on_Stop_pressed"]
[connection signal="animation_finished" from="Box/ControlsBox/Timeline" to="." method="_on_Timeline_animation_finished"]
[connection signal="time_changed" from="Box/ControlsBox/Timeline" to="." method="_on_Timeline_time_changed"]
[connection signal="toggled" from="Box/ControlsBox/Box/Loop" to="." method="_on_Loop_toggled"]
[connection signal="value_changed" from="Box/ControlsBox/Box/Time" to="." method="_on_Time_value_changed"]
[connection signal="value_changed" from="Box/ControlsBox/RotationBox/RxBox/Rx" to="." method="_on_rot_value_changed"]
[connection signal="value_changed" from="Box/ControlsBox/RotationBox/RyBox/Ry" to="." method="_on_rot_value_changed"]
[connection signal="value_changed" from="OptionsScroll/OptionsGrid/PixelDensity" to="Box/TabContainer/Sprite/SpriteView" method="_on_PixelDensity_value_changed"]
[connection signal="pressed" from="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion" to="." method="_on_RootMotion_pressed"]
[connection signal="confirmed" from="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog" to="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog/Scroll/BonesTree" method="_on_RootMotionDialog_confirmed"]
[connection signal="item_activated" from="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog/Scroll/BonesTree" to="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog/Scroll/BonesTree" method="_on_item_activated"]
[connection signal="root_motion_selected" from="OptionsScroll/OptionsGrid/RootMotionBox/RootMotion/RootMotionDialog/Scroll/BonesTree" to="." method="_on_BonesTree_root_motion_selected"]
[connection signal="pressed" from="OptionsScroll/OptionsGrid/RootMotionBox/RootMotionClear" to="." method="_on_RootMotionClear_pressed"]
