[gd_scene load_steps=10 format=2]

[ext_resource path="res://addons/sprite-baker/icons/timeline_tick.svg" type="Texture" id=1]
[ext_resource path="res://addons/sprite-baker/icons/timeline_grabber.svg" type="Texture" id=2]
[ext_resource path="res://addons/sprite-baker/icons/timeline_grabber_highlight.svg" type="Texture" id=3]
[ext_resource path="res://addons/sprite-baker/icons/timeline_grabber_disabled.svg" type="Texture" id=4]
[ext_resource path="res://addons/sprite-baker/scripts/timeline.gd" type="Script" id=5]
[ext_resource path="res://addons/sprite-baker/resources/timeline_tick.stylebox" type="StyleBox" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.14902, 0.152941, 0.113725, 1 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_top = 20.0
content_margin_bottom = 20.0
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.388235, 0.517647, 0.760784, 1 )

[sub_resource type="StyleBoxEmpty" id=3]

[node name="Timeline" type="VBoxContainer"]
margin_right = 334.0
margin_bottom = 58.0
custom_constants/separation = 0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}
tick_style = ExtResource( 6 )
time_ruler_path = NodePath("TimeRuler")
slider_path = NodePath("Margin/Background/Slider")
background_path = NodePath("Margin/Background")
keys_ctrl_path = NodePath("Margin/Background/Slider/Keys")

[node name="TimeRuler" type="HBoxContainer" parent="."]
margin_right = 334.0
margin_bottom = 14.0

[node name="T1" type="Label" parent="TimeRuler"]
margin_right = 20.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "0.0"

[node name="Separator1" type="VSeparator" parent="TimeRuler"]
margin_left = 24.0
margin_right = 153.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_styles/separator = ExtResource( 6 )

[node name="T2" type="Label" parent="TimeRuler"]
margin_left = 157.0
margin_right = 177.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "0.5"

[node name="Separator2" type="VSeparator" parent="TimeRuler"]
margin_left = 181.0
margin_right = 310.0
margin_bottom = 14.0
size_flags_horizontal = 3
custom_styles/separator = ExtResource( 6 )

[node name="T3" type="Label" parent="TimeRuler"]
margin_left = 314.0
margin_right = 334.0
margin_bottom = 14.0
custom_colors/font_color = Color( 0.501961, 0.501961, 0.501961, 1 )
text = "1.0"

[node name="Margin" type="MarginContainer" parent="."]
margin_top = 14.0
margin_right = 334.0
margin_bottom = 54.0
custom_constants/margin_right = 10
custom_constants/margin_left = 10

[node name="Background" type="PanelContainer" parent="Margin"]
margin_left = 10.0
margin_right = 324.0
margin_bottom = 40.0
custom_styles/panel = SubResource( 1 )

[node name="Slider" type="HSlider" parent="Margin/Background"]
margin_right = 314.0
margin_bottom = 40.0
mouse_filter = 1
custom_icons/tick = ExtResource( 1 )
custom_icons/grabber_disabled = ExtResource( 4 )
custom_icons/grabber_highlight = ExtResource( 3 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area = SubResource( 3 )
max_value = 1.5
step = 0.01
editable = false
tick_count = 4
ticks_on_borders = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Keys" type="Control" parent="Margin/Background/Slider"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="draw" from="Margin/Background" to="." method="_on_Background_draw"]
[connection signal="value_changed" from="Margin/Background/Slider" to="." method="_on_Slider_value_changed"]
[connection signal="draw" from="Margin/Background/Slider/Keys" to="." method="_on_Keys_draw"]
